--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Steven App",
+    "name": "Steven Map App",
     "slug": "stevenapp",
     "privacy": "public",
     "sdkVersion": "35.0.0",
@@ -25,6 +25,7 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "description": ""
   }
 }
